--- a/table.css
+++ b/table.css
@@ -192,4 +192,10 @@ table .adder:hover, .exporter:hover
   border: 1px solid blue;
 }
 
+table tr.expanded td
+{
+  padding-left: 15px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+}
 
