--- a/table.css
+++ b/table.css
@@ -72,7 +72,7 @@ table .paging button
   width:18px;
   height:18px;
   cursor: pointer;
-  border: 1px solid d0d0d0;
+  border: 1px solid #d0d0d0;
   vertical-align: top;
   border-radius: 3px;
 }
@@ -199,3 +199,29 @@ table tr.expanded td
   padding-bottom: 5px;
 }
 
+table.expanded
+{
+  position: relative;
+  border: 1px solid #b0b0b0;
+  border-radius: 5px;
+ /* border-collapse: collapse;*/
+  text-align: left;
+  width:100%;
+}
+
+table.expanded th
+{
+  padding: 2px;
+}
+
+table.expanded tr
+{
+  border: 0px;
+}
+
+table.expanded tr.alt td,
+table.expanded tr td
+{
+  background-color: #ABDDEB;
+  padding: 1px;
+}
