--- a/table.css
+++ b/table.css
@@ -2,10 +2,15 @@ table
 {
   position: relative;
   border: 2px solid #b0b0b0;
+  border-radius: 5px;
   border-collapse: collapse;
   font-size: 11px;
   text-align: left;
-  width:100%;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  width:99%;
 }
 
 table tr
@@ -21,6 +26,7 @@ table th
   background-position: center; 
   vertical-align: bottom;
   height: 22px;
+  text-align: left;
   font-size: 11px;
 }
 
