--- a/file_uploader.css
+++ b/file_uploader.css
@@ -19,6 +19,7 @@ Copyright Expression year is undefined on line 4, column 29 in file:///Users/fhu
   right: 0px;
   width: 100%; 
   height: 98%;
+  color: white;
   border: 1px solid #4cae4c;
 }
 
@@ -32,9 +33,17 @@ Copyright Expression year is undefined on line 4, column 29 in file:///Users/fhu
 { 
   position: absolute;
   width: 100%;
-  top: 6px;
-  color: white;
+  top: 6px;  
+  margin-left: 10px;
   text-align: left;
+}
+
+.file_uploader .error .percent, 
+.file_uploader .uploaded .percent
+{ 
+  margin-left: 0px;
+  text-align: center;
+  width: 80px;
 }
 
 .file_uploader iframe
