--- a/wizard.css
+++ b/wizard.css
@@ -11,6 +11,7 @@
   display: block;
   position: absolute;
   top: 0px;
+  width: 100%
 }
 
 
@@ -43,14 +44,6 @@
 .wizard-content
 {
   width: 100%;
-  top: -28px;
+  top: -10px;
   position: relative;
-}
-.wizard-heading>*
-{
-/*  -webkit-transform:rotate(90deg);
-  -moz-transform:rotate(90deg);
-  -o-transform: rotate(90deg);
-  -ms-transform:rotate(90deg);
-  transform: rotate(270deg);*/
 }
