align navigation button to edges

--- a/wizard.css
+++ b/wizard.css
@@ -26,6 +26,16 @@
   left: 8px;
 }
 
+.wizard-nav .wizard-prev
+{
+  float: left;
+}
+
+.wizard-nav .wizard-next
+{
+  float: right;
+}
+
 .wizard-bookmark
 {
   background-color: darkcyan;
