allow any button to be put on navigation

--- a/wizard.css
+++ b/wizard.css
@@ -26,14 +26,14 @@
   left: 8px;
 }
 
+.wizard-nav .action
+{
+  float: right;
+}
+
 .wizard-nav .wizard-prev
 {
   float: left;
-}
-
-.wizard-nav .wizard-next
-{
-  float: right;
 }
 
 .wizard-bookmark
