--- a/input_page.css
+++ b/input_page.css
@@ -12,7 +12,7 @@
   display: block;
 }
 
-.input>span
+.hint
 {
   display: none;
   margin-left: auto;
@@ -29,8 +29,8 @@
   background: #FFFFC0;
 }
 
-.input:focus>span,
-.input:hover>span
+.input:focus>.hint,
+.input:hover>.hint
 {
   z-index: 1000;
   display: block;
@@ -46,7 +46,6 @@
 {
   vertical-align: top;
   text-align: right;
-  width: 24%;
   display: inline-block;
   font-size: 11pt;
   font-weight: 100;
@@ -56,7 +55,7 @@
 {
   display: inline-block;
   margin-left: 1%;
-  width: 74%;
+  width: 73%;
 }
 
 .labelled-input+.actions
@@ -64,11 +63,66 @@
   margin-top: 12px;
   margin-bottom: 12px;
   margin-left: 26%;
-  width: 74%;
+  width: 73%;
 }
 
 .inplace-input
 {
   margin-bottom: 6px;
   width: 100%;
+}
+
+.info-line
+{
+  margin-bottom: 2px;
+  font-size: 10pt;
+  display: block;
+}
+
+.info-line>label
+{
+  vertical-align: top;
+  text-align: right;
+  width: 32%;
+  display: inline-block;
+  font-size: 9pt;
+  font-weight: lighter;
+  padding-right: 8px;
+}
+
+.info-line>label+*
+{
+  display: inline-block;
+  background: lightgrey;
+  font-weight: bold;
+  width: 58%;
+}
+
+.question-input
+{
+  margin-bottom: 16px;
+  width: 100%
+}
+
+.question-input>label
+{
+  vertical-align: top;
+  text-align: left;
+  display: block;
+  font-size: 11pt;
+  font-weight: 100;
+  margin-bottom: 3px;
+}
+
+.question-input>.input
+{
+  display: block;
+  width: 100%;
+}
+
+.input[type=radio],
+.input[type=checkbox]
+{
+  width: 24px;
+  height: 24px;
 }
