--- a/input_page.css
+++ b/input_page.css
@@ -12,6 +12,38 @@
   display: block;
 }
 
+.input>label+*
+{
+  position: relative;
+  width: 100%;
+  left: 0px;
+  font-weight: 100;
+  border-radius: 6px;
+  height: 32px;
+}
+
+.input>*
+{
+  width: 100%;
+  border-radius: 6px;
+  height: 32px;
+  vertical-align: middle;
+}
+
+.input>input[type=radio],
+.input>input[type=checkbox]
+{
+  width: 24px;
+  height: 24px;
+}
+
+.input>*:first-child:focus
+{
+  -moz-box-shadow: 3px 3px 4px #3f3f3f;
+  -webkit-box-shadow: 3px 3px 4px #3f3f3f;
+  box-shadow: 3px 3px 4px #3f3f3f;
+}
+
 .hint
 {
   display: none;
@@ -70,6 +102,9 @@
 {
   margin-bottom: 6px;
   width: 100%;
+  font-weight: 100;
+  border-radius: 6px;
+  height: 32px;
 }
 
 .info-line
@@ -114,15 +149,20 @@
   margin-bottom: 3px;
 }
 
-.question-input>.input
+.question-input>label+*
 {
   display: block;
   width: 100%;
+  font-weight: 100;
+  border-radius: 6px;
+  height: 32px;
 }
-
-.input[type=radio],
-.input[type=checkbox]
+.question-input>input[type=checkbox]
 {
   width: 24px;
-  height: 24px;
+}
+
+select>option
+{
+  height: 32px;
 }
