--- a/input_page.css
+++ b/input_page.css
@@ -54,9 +54,8 @@
   bottom: 36px;
   left: 0px;
   font-size: 11px;
-  font-weight: bold;
+  font-weight: normal;
   font-style: italic;
-  height: auto;
   background-color: rgba(255,255,255,0.85);
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
