decouple info-text style from info-line

--- a/input_page.css
+++ b/input_page.css
@@ -166,9 +166,13 @@
 .info-line>label+*
 {
   display: inline-block;
+  width: 58%;
+}
+
+.info-text
+{
   background: lightgrey;
   font-weight: bold;
-  width: 58%;
 }
 
 .question-input>label
