--- a/datatable.css
+++ b/datatable.css
@@ -3,13 +3,16 @@ table.data
   position: relative;
   border-radius: 5px;
   border-collapse: collapse;
-  font-size: 10pt;
-  font-weight: 100;
   text-align: left;
   -moz-box-shadow: 3px 3px 3px 4px lightgray;
   -webkit-box-shadow: 3px 3px 3px 4px lightgray;
   width: 100%;
   word-wrap: break-word;
+}
+
+table.data, table.data td, table.data th {
+  font-size: 10pt;
+  font-weight: 100;
 }
 
 table.data>thead
@@ -182,20 +185,16 @@ table.data .adder:hover, .exporter:hover
   border: 1px solid blue;
 }
 
-table.data tr.expanded>td
+table.data>tbody>tr.expanded>td
 {
-  padding-left: 30px;
-  padding-right: 20px;
-  padding-bottom: 10px;
-  background-color: white;
-  border: 1px solid lightblue;
+  padding: 10px;
   font-size: 9pt;
   width: 100%;
 }
 
 table.data tr.expanded>td>*
 {
-  width:100%;
+  width: 100%;
 }
 
 table.data tr [action]
