--- a/wizard.css
+++ b/wizard.css
@@ -12,7 +12,7 @@
 
 .wizard-page {
   display: table-cell;
-  padding: 0 8;
+  padding: 0px 8px;
   vertical-align: top;
   margin-left: auto;
   margin-right: auto;
@@ -23,22 +23,22 @@
   display: table-cell;
   vertical-align: top;
   width: 20%;
-  padding: 4;
   height: 100%;
   font-size: 10pt;
   background-color: whitesmoke;
 }
 
-.wizard-bookmark-holder-left>.wizard-bookmark>* {
-  display: inline-block;;
+.wizard-bookmark {
+  padding: 3px 4px;
 }
 
-.wizard-bookmark-holder-left .wizard-bookmark-number {
-  margin-right: 4px;
+.wizard-bookmark-holder-left>.wizard-bookmark>* {
+  display: inline-block;
+  padding: 0px 4px;
 }
 
 .wizard-bookmark-holder-left .wizard-bookmark-title {
-  margin-right: 16px;
+  padding-right: 20px;
 }
 
 .wizard-state-pend {
@@ -49,17 +49,19 @@
 .wizard-state-active {
   color: white;
   background-color: darkcyan;
-  cursor: done;
+  cursor: default;
 }
 
-.wizard-state-done {
+.wizard-state-done, .wizard-state-visited {
   color: darkcyan;
+}
+
+.wizard-state-done>.wizard-bookmark-title{
   background-image: url('tick16.png');
   background-position: center right;
   background-repeat: no-repeat;
   cursor: pointer;
 }
-
 
 .wizard-navigate {
   background-color: whitesmoke;
