--- a/wizard.css
+++ b/wizard.css
@@ -10,6 +10,10 @@
   padding: 0 !important;
 }
 
+.wizard-hide {
+  display: none !important;
+}
+
 .wizard-page {
   vertical-align: top;
   margin-left: auto;
