--- a/didi.css
+++ b/didi.css
@@ -10,56 +10,315 @@ div {
   position: relative;
 }
 
-/* Classed Styles */
-.auto-height { height: auto; }
-.autoheight { height: auto; }
-.auto-size { width: auto; height: auto; }
-.autosize { width: auto; height: auto; }
-.biggest { width: 100%; height: 100%; }
-.block { display: block; }
-.bold { font-weight: bold; }
-.bolder { font-weight: bolder; }
-.border: { border-style: solid }
-.borderless {
-  border-top: 0;
-  border-bottom: 0;
-  border-left: 0;
-  border-right: 0;
+*{
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  box-sizing:border-box
 }
-.bottom-left { position: absolute; bottom: 0; left: 0; }
-.bottom-right { position: absolute; bottom: 0; right: 0; }
-.bottom-border { border-bottom: solid; }
-.centered { margin-left: auto; margin-right: auto; }
-.center-all { text-align: center; margin-left: auto; margin-right: auto; vertical-align: center; }
-.center-text { text-align: center; }
-.darker { color: #333; }
-.double-spaced { margin-top: 10px; }
-.float-left { float: left; }
-.float-right { float: right; }
+
+/* Classed Styles */
+/* modal styles */
+.modal{z-index:3;display:none;padding-top:100px;position:fixed;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:rgb(0,0,0);background-color:rgba(0,0,0,0.4)}
+.modal-content{margin:auto;background-color:#fff;position:relative;padding:0;outline:0;width:600px}
+.closebtn{text-decoration:none;float:right;font-size:24px;font-weight:bold;color:inherit}
+.closebtn:hover,.closebtn:focus{color:#000;text-decoration:none;cursor:pointer}
+@media (max-width:600px){
+  .modal-content{margin:0 10px;width:auto}
+  .modal{padding-top:30px}
+}
+@media (max-width:768px){
+  .modal-content{width:500px}
+  .modal{padding-top:50px}
+}
+@media (min-width:993px){
+  .modal-content{width:900px}
+}
+
+/* sizes */
+.auto-height,.autoheight { height: auto; }
+.auto-size,.autosize { width: auto; height: auto; }
+.biggest { width: 100%; height: 100%; }
+.highest,.tallest { height: 100%; }
+
+/* cursor */
+.autocursor,.auto-cursor: { cursor: auto }
+/* display styles */
+.block { display: block; }
 .hide { display: none; }
-.highest { height: 100%; }
 .inline { display: inline; }
 .inline-block { display: inline-block; }
+
+/* font styles */
+.bold { font-weight: bold; }
+.bolder { font-weight: bolder; }
 .italic { font-style: italic; }
-.left-text { text-align: left; }
-.lighter-font { font-weight: lighter; }
-.lowercase { text-transform: lowercase; }
-.medium-font { font-size: 26pt; }
-.pushed-left { position: absolute; left: 0; }
-.pushed-right { position: absolute; right: 0; }
-.right-text { text-align: right; }
-.small-font { font-size: 8pt; }
-.scroll-vertical { overflow-y: auto; }
-.scroll-y { overflow-y: auto; }
-.tallest { height: 100%; }
-.thin-border { border-width: 1px; }
-.thin-font { font-weight: 100; }
+.lighter { font-weight: lighter; }
+.thin,.thinner { font-weight: 100; }
+
+/* font sizes */
+.tiny-font{font-size:10px}
+.small-font{font-size:12px}
+.medium-font{font-size:15px}
+.large-font{font-size:18px}
+.xlarge-font{font-size:24px}
+.xxlarge-font{font-size:36px}
+.xxxlarge-font{font-size:48px}
+.jumbo-font{font-size:64px}
+
+
+/* border styles */
+.border{border-width:1px}
+.solid{border-style:solid }
+.borderless { border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
+.bottom-border,.border-bottom { border-bottom: 1; }
+.shadow {box-shadow:0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12) }
+.rounded-small{border-radius:2px!important}
+.rounded,.rounded-medium{border-radius:4px!important}
+.rounded-large{border-radius:8px!important}
+.rounded-xlarge{border-radius:16px!important}
+.rounded-xxlarge{border-radius:32px!important}
+.rounded-jumbo{border-radius:64px!important}
+
+/* positions */
+.absolute { position:absolute}
+.bottom { position: absolute; top: 0; }
+.bottom-left { position: absolute; bottom: 0; left: 0; }
+.bottom-right { position: absolute; bottom: 0; right: 0; }
+.centered { margin-left: auto; margin-right: auto; }
+.center-all { text-align: center; margin-left: auto; margin-right: auto; vertical-align: center; }
+.center-x{ position: absolute; left: 50%}
+.center-y{ position: absolute; top: 50%}
+.center-text { text-align: center; }
+.float-left { float: left; }
+.float-right { float: right; }
+.left { position: absolute; left: 0; }
+.margin-0,.nomargin{ margin: 0 }
+.right { position: absolute; right: 0; }
+.top { position: absolute; top: 0; }
 .top-left { position: absolute; top: 0; left: 0; }
 .top-right { position: absolute; top: 0; right: 0; }
-.tripple_spaced { margin-top: 12px; }
+
+/* hover */
+.hover-shadow:hover{box-shadow:0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)}
+/* colors */
+.hover-none:hover{box-shadow:none;background-color:transparent}
+.amber,.hover-amber:hover{color:#000;background-color:#ffc107}
+.aqua,.hover-aqua:hover{color:#000;background-color:#00ffff}
+.blue,.hover-blue:hover{color:#fff;background-color:#2196F3}
+.light-blue,.hover-light-blue:hover{color:#000;background-color:#87CEEB}
+.brown,.hover-brown:hover{color:#fff;background-color:#795548}
+.cyan,.hover-cyan:hover{color:#000;background-color:#00bcd4}
+.blue-grey,.hover-blue-grey:hover{color:#fff;background-color:#607d8b}
+.green,.hover-green:hover{color:#fff;background-color:#4CAF50}
+.light-green,.hover-light-green:hover{color:#000;background-color:#8bc34a}
+.indigo,.hover-indigo:hover{color:#fff;background-color:#3f51b5}
+.khaki,.hover-khaki:hover{color:#000;background-color:#f0e68c}
+.lime,.hover-lime:hover{color:#000;background-color:#cddc39}
+.orange,.hover-orange:hover{color:#000;background-color:#ff9800}
+.deep-orange,.hover-deep-orange:hover{color:#fff;background-color:#ff5722}
+.pink,.hover-pink:hover{color:#fff;background-color:#e91e63}
+.purple,.hover-purple:hover{color:#fff;background-color:#9c27b0}
+.deep-purple,.hover-deep-purple:hover{color:#fff;background-color:#673ab7}
+.red,.hover-red:hover{color:#fff;background-color:#f44336}
+.sand,.hover-sand:hover{color:#000;background-color:#fdf5e6}
+.teal,.hover-teal:hover{color:#fff;background-color:#009688}
+.yellow,.hover-yellow:hover{color:#000;background-color:#ffeb3b}
+.white,.hover-white:hover{color:#000;background-color:#fff}
+.black,.hover-black:hover{color:#fff;background-color:#000}
+.grey,.hover-grey:hover{color:#000;background-color:#9e9e9e}
+.light-grey,.hover-light-grey:hover{color:#000;background-color:#f1f1f1}
+.dark-grey,.hover-dark-grey:hover{color:#fff;background-color:#616161}
+.pale-red,.hover-pale-red:hover{color:#000;background-color:#ffe7e7}
+.pale-green,.hover-pale-green:hover{color:#000;background-color:#e7ffe7}
+.pale-yellow,.hover-pale-yellow:hover{color:#000;background-color:#ffffd7}
+.pale-blue,.hover-pale-blue:hover{color:#000;background-color:#e7ffff}
+.text-amber,.hover-text-amber:hover{color:#ffc107}
+.text-aqua,.hover-text-aqua:hover{color:#00ffff}
+.text-blue,.hover-text-blue:hover{color:#2196F3}
+.text-light-blue,.hover-text-light-blue:hover{color:#87CEEB}
+.text-brown,.hover-text-brown:hover{color:#795548}
+.text-cyan,.hover-text-cyan:hover{color:#00bcd4}
+.text-blue-grey,.hover-text-blue-grey:hover{color:#607d8b}
+.text-green,.hover-text-green:hover{color:#4CAF50}
+.text-light-green,.hover-text-light-green:hover{color:#8bc34a}
+.text-indigo,.hover-text-indigo:hover{color:#3f51b5}
+.text-khaki,.hover-text-khaki:hover{color:#b4aa50}
+.text-lime,.hover-text-lime:hover{color:#cddc39}
+.text-orange,.hover-text-orange:hover{color:#ff9800}
+.text-deep-orange,.hover-text-deep-orange:hover{color:#ff5722}
+.text-pink,.hover-text-pink:hover{color:#e91e63}
+.text-purple,.hover-text-purple:hover{color:#9c27b0}
+.text-deep-purple,.hover-text-deep-purple:hover{color:#673ab7}
+.text-red,.hover-text-red:hover{color:#f44336}
+.text-sand,.hover-text-sand:hover{color:#fdf5e6}
+.text-teal,.hover-text-teal:hover{color:#009688}
+.text-yellow,.hover-text-yellow:hover{color:#d2be0e}
+.text-white,.hover-text-white:hover{color:#fff}
+.text-black,.hover-text-black:hover{color:#000}
+.text-grey,.hover-text-grey:hover{color:#757575}
+.text-light-grey,.hover-text-light-grey:hover{color:#f1f1f1}
+.text-dark-grey,.hover-text-dark-grey:hover{color:#3a3a3a}
+.border-amber,.hover-border-amber:hover{border-color:#ffc107}
+.border-aqua,.hover-border-aqua:hover{border-color:#00ffff}
+.border-blue,.hover-border-blue:hover{border-color:#2196F3}
+.border-light-blue,.hover-border-light-blue:hover{border-color:#87CEEB}
+.border-brown,.hover-border-brown:hover{border-color:#795548}
+.border-cyan,.hover-border-cyan:hover{border-color:#00bcd4}
+.border-blue-grey,.hover-blue-grey:hover{border-color:#607d8b}
+.border-green,.hover-border-green:hover{border-color:#4CAF50}
+.border-light-green,.hover-border-light-green:hover{border-color:#8bc34a}
+.border-indigo,.hover-border-indigo:hover{border-color:#3f51b5}
+.border-khaki,.hover-border-khaki:hover{border-color:#f0e68c}
+.border-lime,.hover-border-lime:hover{border-color:#cddc39}
+.border-orange,.hover-border-orange:hover{border-color:#ff9800}
+.border-deep-orange,.hover-border-deep-orange:hover{border-color:#ff5722}
+.border-pink,.hover-border-pink:hover{border-color:#e91e63}
+.border-purple,.hover-border-purple:hover{border-color:#9c27b0}
+.border-deep-purple,.hover-border-deep-purple:hover{border-color:#673ab7}
+.border-red,.hover-border-red:hover{border-color:#f44336}
+.border-sand,.hover-border-sand:hover{border-color:#fdf5e6}
+.border-teal,.hover-border-teal:hover{border-color:#009688}
+.border-yellow,.hover-border-yellow:hover{border-color:#ffeb3b}
+.border-white,.hover-border-white:hover{border-color:#fff}
+.border-black,.hover-border-black:hover{border-color:#000}
+.border-grey,.hover-border-grey:hover{border-color:#9e9e9e}
+.border-light-grey,.hover-border-light-grey:hover{border-color:#f1f1f1}
+.border-dark-grey,.hover-border-dark-grey:hover{border-color:#616161}
+.border-pale-red,.hover-border-pale-red:hover{border-color:#ffe7e7}
+.border-pale-green,.hover-border-pale-green:hover{border-color:#e7ffe7}
+.border-pale-yellow,.hover-border-pale-yellow:hover{border-color:#ffffd7}
+.border-pale-blue,.hover-border-pale-blue:hover{border-color:#e7ffff}
+
+/* spacing */
+.double-spaced { margin-top: 10px; }
+.pad-0,.nopad{padding:0}
+.pad-tiny{padding:2px}
+.pad-tiny{padding:2px}
+.pad-small{padding:4px}
+.pad-medium,.pad{padding:8px}
+.pad-large{padding:12px}
+.pad-xlarge{padding:16px}
+.pad-xxlarge{padding:24px}
+.pad-jumbo{padding:32px}
+.pad-4{padding:4px}
+.pad-8{padding:8}
+.pad-12{padding:12}
+.pad-16{padding:16}
+.pad-24{padding:24}
+.pad-32{padding:32}
+.pad-48{padding:48}
+.pad-64{padding:64}
+.pad-128{padding:128}
+.pad-bottom{padding-bottom:8px}
+.pad-left{padding-left:16px}
+.pad-right{padding-right:16px}
+.pad-tiny{padding:2px}
+.pad-top{padding-top:8px}
+.pad-x{padding-left: 8px; padding-right: 8px}
+.pad-y{padding-top: 8px; padding-bottom: 8px}
+.tripple-spaced { margin-top: 12px; }
+
+
+/* text alignment */
+.left-text { text-align: left; }
+.right-text { text-align: right; }
+
+/* text transformation */
+.lowercase { text-transform: lowercase; }
 .underlined { text-decoration: underline; }
 .uppercase { text-transform: uppercase; }
+.undecorated { text-decoration: none; }
+/* scrolling */
+.scroll-horizontal,.scroll-x { overflow-x: auto; }
+.scroll-vertical,.scroll-y { overflow-y: auto; }
+
+/*  height */
+.tiny{height:10px}
+.small{height:12px}
+.medium{height:15px}
+.large{height:18px}
+.xlarge{height:24px}
+.xxlarge{height:36px}
+.xxxlarge{height:48px}
+.jumbo{height:64px}
+.tallest { height: 100%; }
+
+/* vertical alignment */
 .vertical-bottom { vertical-align: bottom; }
-.vertical-center { vertical-align: center; }
+.vertical-center,.vertical-middle { vertical-align: middle; }
 .vertical-top { vertical-align: top; }
-.widest { width: 100%; }
+
+
+/* animations */
+.spin,.animate-spin{animation:spin 2s infinite linear;-webkit-animation:spin 2s infinite linear}
+@-webkit-keyframes spin{
+0%{-webkit-transform:rotate(0deg);transform:rotate(0deg)}100%{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
+@keyframes spin{
+0%{-webkit-transform:rotate(0deg);transform:rotate(0deg)}100%{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
+.animate-fading{-webkit-animation:fading 10s infinite;animation:fading 10s infinite}
+@-webkit-keyframes fading{0%{opacity:0}50%{opacity:1}100%{opacity:0}}
+@keyframes fading{0%{opacity:0}50%{opacity:1}100%{opacity:0}}
+.animate-opacity{-webkit-animation:opac 1.5s;animation:opac 1.5s}
+@-webkit-keyframes opac{from{opacity:0} to{opacity:1}}
+@keyframes opac{from{opacity:0} to{opacity:1}}
+.animate-top{position:relative;-webkit-animation:animatetop 0.4s;animation:animatetop 0.4s}
+@-webkit-keyframes animatetop{from{top:-300px;opacity:0} to{top:0;opacity:1}}
+@keyframes animatetop{from{top:-300px;opacity:0} to{top:0;opacity:1}}
+.animate-left{position:relative;-webkit-animation:animateleft 0.4s;animation:animateleft 0.4s}
+@-webkit-keyframes animateleft{from{left:-300px;opacity:0} to{left:0;opacity:1}}
+@keyframes animateleft{from{left:-300px;opacity:0} to{left:0;opacity:1}}
+.animate-right{position:relative;-webkit-animation:animateright 0.4s;animation:animateright 0.4s}
+@-webkit-keyframes animateright{from{right:-300px;opacity:0} to{right:0;opacity:1}}
+@keyframes animateright{from{right:-300px;opacity:0} to{right:0;opacity:1}}
+.animate-bottom{position:relative;-webkit-animation:animatebottom 0.4s;animation:animatebottom 0.4s}
+@-webkit-keyframes animatebottom{from{bottom:-300px;opacity:0} to{bottom:0px;opacity:1}}
+@keyframes animatebottom{from{bottom:-300px;opacity:0} to{bottom:0;opacity:1}}
+.animate-zoom {-webkit-animation:animatezoom 0.6s;animation:animatezoom 0.6s}
+@-webkit-keyframes animatezoom{from{-webkit-transform:scale(0)} to{-webkit-transform:scale(1)}}
+@keyframes animatezoom{from{transform:scale(0)} to{transform:scale(1)}}
+
+.col.s1{width:8.33333%}
+.col.s2{width:16.66666%}
+.col.s3{width:24.99999%}
+.col.s4{width:33.33333%}
+.col.s5{width:41.66666%}
+.col.s6{width:49.99999%}
+.col.s7{width:58.33333%}
+.col.s8{width:66.66666%}
+.col.s9{width:74.99999%}
+.col.s10{width:83.33333%}
+.col.s11{width:91.66666%}
+.col.s12,.half,.third,.twothird,.quarter,.threequarter,.widest{width:99.99999%}
+@media only screen and (max-width:600px){
+.hide-small { display: none}
+}
+@media only screen and (min-width:601px){
+.col.m1{width:8.33333%}
+.col.m2{width:16.66666%}
+.col.m3,.quarter{width:24.99999%}
+.col.m4,.third{width:33.33333%}
+.col.m5{width:41.66666%}
+.col.m6,.half{width:49.99999%}
+.col.m7{width:58.33333%}
+.col.m8,.twothird{width:66.66666%}
+.col.m9,.threequarter{width:74.99999%}
+.col.m10{width:83.33333%}
+.col.m11{width:91.66666%}
+.col.m12{width:99.99999%}
+.hide-medium { display: none}
+}
+@media only screen and (min-width:993px){
+.col.l1{width:8.33333%}
+.col.l2{width:16.66666%}
+.col.l3,.quarter{width:24.99999%}
+.col.l4,.third{width:33.33333%}
+.col.l5{width:41.66666%}
+.col.l6,.half{width:49.99999%}
+.col.l7{width:58.33333%}
+.col.l8,.twothird{width:66.66666%}
+.col.l9,.threequarter{width:74.99999%}
+.col.l10{width:83.33333%}
+.col.l11{width:91.66666%}
+.col.l12{width:99.99999%}
+.hide-large { display: none}
+}
