--- a/didi.css
+++ b/didi.css
@@ -1,19 +1,16 @@
 /* Global Styles */
-body {
-  background-color:whitesmoke;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 11pt;
-  margin: 0;
-}
-
-div {
-  position: relative;
-}
-
-*{
+.didi {
   -webkit-box-sizing:border-box;
   -moz-box-sizing:border-box;
-  box-sizing:border-box
+  box-sizing:border-box;
+  position: relative;
+  font-family: Verdana, sans-serif;
+  line-height: 1.2;
+  font-weight: 100;
+}
+
+body.didi {
+  margin: 0;
 }
 
 /* Classed Styles */
@@ -67,10 +64,9 @@ div {
 
 
 /* border styles */
-.border{border-width:1px; border-color: #ccc}
-.solid{border-style:solid }
+.border{border: 1px solid #ccc;}
 .borderless { border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
-.bottom-border,.border-bottom { border-bottom: 1; }
+.bottom-border,.border-bottom { border-bottom: 1px solid #ccc; }
 .shadow {box-shadow:0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12) }
 .rounded-small{border-radius:2px!important}
 .rounded,.rounded-medium{border-radius:4px!important}
@@ -81,22 +77,21 @@ div {
 
 /* positions */
 .absolute { position:absolute}
-.bottom { position: absolute; top: 0; }
-.bottom-left { position: absolute; bottom: 0; left: 0; }
-.bottom-right { position: absolute; bottom: 0; right: 0; }
+.bottom,.bottom-left,.bottom-right { top: 0; }
 .centered { margin-left: auto; margin-right: auto; }
 .center-all { text-align: center; margin-left: auto; margin-right: auto; vertical-align: center; }
-.center-x{ position: absolute; left: 50%}
-.center-y{ position: absolute; top: 50%}
+.center-x,.middle-x,.middle{ left: 50%}
+.center-y,.middle-y,.middle{ top: 50%}
 .center-text { text-align: center; }
 .float-left { float: left; }
 .float-right { float: right; }
-.left { position: absolute; left: 0; }
+.left,.top-left,.bottom-left { left: 0; }
 .margin-0,.nomargin{ margin: 0 }
-.right { position: absolute; right: 0; }
-.top { position: absolute; top: 0; }
-.top-left { position: absolute; top: 0; left: 0; }
-.top-right { position: absolute; top: 0; right: 0; }
+.middle{ transform: translate(-50%,-50%); transform: ms-translateX(-50%,-50%)}
+.middle-x{ transform: translateX(-50%); transform: ms-translateX(-50%)}
+.middle-y{ transform: translateY(-50%);transform: ms-translateY(-50%)}
+.right,.bottom-right,.top-right { right: 0; }
+.top,.top-left,.top-right { top: 0; }
 
 /* hover */
 .hover-shadow:hover{box-shadow:0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)}
