--- a/didi.css
+++ b/didi.css
@@ -33,10 +33,12 @@ body.didi {
 
 /* sizes */
 .auto-height,.autoheight { height: auto; }
+.auto-width,.autowidth { width: auto; }
 .auto-size,.autosize { width: auto; height: auto; }
 .biggest { width: 100%; height: 100%; }
 .highest,.tallest { height: 100%; }
 
+.clear::after{content:"";display:table;clear:both}
 /* cursor */
 .autocursor,.auto-cursor: { cursor: auto }
 /* display styles */
