--- a/didi.css
+++ b/didi.css
@@ -38,9 +38,13 @@ body.didi {
 .biggest { width: 100%; height: 100%; }
 .highest,.tallest { height: 100%; }
 
+/* clearing */
 .clear::after{content:"";display:table;clear:both}
+
 /* cursor */
-.autocursor,.auto-cursor: { cursor: auto }
+.autocursor,.auto-cursor { cursor: auto }
+.pointer-cursor,.cursor-pointer { cursor: pointer}
+
 /* display styles */
 .block { display: block; }
 .hide { display: none; }
@@ -65,9 +69,23 @@ body.didi {
 .jumbo-font{font-size:64px}
 
 
+/* list styles */
+.nolist { list-style: none }
+
+/* dropdown */
+.hover-dropdown>.dropdown { display: none;}
+.hover-dropdown:hover>.dropdown { display: block;}
+
+/* opacity */
+.transparent,.transparent-5.hover-transparent:hover,.hover-transparent-5{opacity:0.50;filter:alpha(opacity=50)}
+.transparent-6,.hover-transparent-7:hover{opacity:0.60;filter:alpha(opacity=60)}
+.transparent-7,.hover-transparent-7:hover{opacity:0.70;filter:alpha(opacity=70)}
+.transparent-8,.hover-transparent-8:hover{opacity:0.80;filter:alpha(opacity=80)}
+.transparent-9,.hover-transparent-9:hover{opacity:0.90;filter:alpha(opacity=90)}
 /* border styles */
 .border{border: 1px solid #ccc;}
 .borderless { border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
+.right-border,.border-right { border-right: 1px solid #ccc; }
 .bottom-border,.border-bottom { border-bottom: 1px solid #ccc; }
 .shadow {box-shadow:0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12) }
 .rounded-small{border-radius:2px!important}
@@ -93,6 +111,7 @@ body.didi {
 .middle-x{ transform: translateX(-50%); transform: ms-translateX(-50%)}
 .middle-y{ transform: translateY(-50%);transform: ms-translateY(-50%)}
 .right,.bottom-right,.top-right { right: 0; }
+.overlay { z-index: 100 }
 .top,.top-left,.top-right { top: 0; }
 
 /* hover */
@@ -235,7 +254,7 @@ body.didi {
 .medium{height:15px}
 .large{height:18px}
 .xlarge{height:24px}
-.xxlarge{height:36px}
+.xxlarge,.xxlarge-height{height:36px}
 .xxxlarge{height:48px}
 .jumbo{height:64px}
 .tallest { height: 100%; }
