--- a/didi.css
+++ b/didi.css
@@ -215,14 +215,20 @@
 /* spacing */
 .double-spaced { margin-top: 10px; }
 .pad-0,.nopad{padding:0}
-.pad-1,.pad-min{padding:1}
-.pad-2,.pad-tiny{padding:2px}
-.pad-4,.pad-small{padding:4px}
-.pad-8,.pad,.pad-medium{padding:8}
-.pad-12,.pad-large{padding:12}
-.pad-16,.pad-xlarge{padding:16}
-.pad-24,.pad-xxlarge{padding:24}
-.pad-32,.pad-xxxlarge,.pad-jumbo{padding:32}
+.pad-1,.pad-min,.pad-x-1{padding-left:1; padding-right:1}
+.pad-1,.pad-min,.pad-y-1{padding-top:1; padding-bottom:1}
+.pad-2,.pad-tiny,.pad-x-2{padding-left:2; padding-right:2}
+.pad-2,.pad-tiny,.pad-y-2{padding-top:2; padding-bottom:2}
+.pad-4,.pad-small,.pad-x-4{padding-left:4; padding-right:4}
+.pad-4,.pad-small,.pad-y-4{padding-top:4; padding-bottom:4}
+.pad-8,.pad,.pad-medium,.pad-x,.pad-x-8{padding-left:8; padding-right:8}
+.pad-8,.pad,.pad-medium,.pad-y,.pad-y-8{padding-top:8; padding-bottom:8}
+.pad-12,.pad-large,.pad-x-12{padding-left:12; padding-right:12}
+.pad-12,.pad-large,.pad-y-12{padding-top:12; padding-bottom:12}
+.pad-16,.pad-xlarge,.pad-x-16{padding-left:16; padding-right:16}
+.pad-16,.pad-xlarge,.pad-y-16{padding-top:16; padding-bottom:16}
+.pad-32,.pad-xxlarge,.pad-x-32{padding-left:32; padding-right:32}
+.pad-32,.pad-xxlarge,.pad-y-32{padding-top:32; padding-bottom:32}
 .pad-48{padding:48}
 .pad-64{padding:64}
 .pad-128{padding:128}
@@ -230,8 +236,6 @@
 .pad-left{padding-left:16px}
 .pad-right{padding-right:16px}
 .pad-top{padding-top:8px}
-.pad-x{padding-left: 8px; padding-right: 8px}
-.pad-y{padding-top: 8px; padding-bottom: 8px}
 .justify {
   display: -webkit-flex; /* Safari */
   -webkit-justify-content: space-between; /* Safari 6.1+ */
