--- a/didi.css
+++ b/didi.css
@@ -93,6 +93,7 @@
 /* border styles */
 .border{border: 1px solid #ccc;}
 .borderless { border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
+.left-border,.border-left { border-left: 1px solid #ccc; }
 .right-border,.border-right { border-right: 1px solid #ccc; }
 .bottom-border,.border-bottom { border-bottom: 1px solid #ccc; }
 .border-top,.top-border{ border-top: 1px solid #ccc; }
@@ -258,6 +259,7 @@
 /* scrolling */
 .scroll-horizontal,.scroll-x { overflow-x: auto; }
 .scroll-vertical,.scroll-y { overflow-y: auto; }
+.noscroll { overflow: hidden}
 
 /*  height */
 .height-1{height:1px}
