--- a/didi.css
+++ b/didi.css
@@ -5,6 +5,7 @@
   box-sizing:border-box;
   position: relative;
   font-family: Verdana, sans-serif;
+  border-width: 1px;
 }
 
 /* Classed Styles */
@@ -93,20 +94,24 @@
 .transparent-7,.hover-transparent-7:hover{opacity:0.70;filter:alpha(opacity=70)}
 .transparent-8,.hover-transparent-8:hover{opacity:0.80;filter:alpha(opacity=80)}
 .transparent-9,.hover-transparent-9:hover{opacity:0.90;filter:alpha(opacity=90)}
+
 /* border styles */
-.border{border: 1px solid #ccc;}
-.borderless { border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
-.left-border,.border-left { border-left: 1px solid #ccc; }
-.right-border,.border-right { border-right: 1px solid #ccc; }
-.bottom-border,.border-bottom { border-bottom: 1px solid #ccc; }
-.border-top,.top-border{ border-top: 1px solid #ccc; }
+.borderless,.border-less { border-width: 0}
+.border-thin { border-width: 1px}
+.border-small { border-width: 2px;}
+.border-medium { border-width: 4px}
+.border-large { border-width: 8px}
+.left-border,.border-left { border-left-style: solid }
+.right-border,.border-right { border-right-style: solid }
+.bottom-border,.border-bottom { border-bottom-style: solid }
+.border-top,.top-border { border-top-style: solid }
 .shadow {box-shadow:0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12) }
-.rounded-small{border-radius:2px!important}
-.rounded,.rounded-medium{border-radius:4px!important}
-.rounded-large{border-radius:8px!important}
-.rounded-xlarge{border-radius:16px!important}
-.rounded-xxlarge{border-radius:32px!important}
-.rounded-jumbo{border-radius:64px!important}
+.rounded-small{border-radius:2px}
+.rounded,.rounded-medium{border-radius:4px}
+.rounded-large{border-radius:8px}
+.rounded-xlarge{border-radius:16px}
+.rounded-xxlarge{border-radius:32px}
+.rounded-jumbo{border-radius:64px}
 
 /* positions */
 .absolute { position:absolute}
